firmware: Update nt36523 touch firmware from nabu OS1.0.3.0.TKXCNXM
* check novatek proc node file: (/proc/nvt_fw_version)
  fw_ver=25, ... (where fw_ver changes from 18 to 25.)

* nabu firmware feature code:
  00 0a 02 00 00 00 00 00 00 2a 02 00 cb 94 d0 20
  (The number of lines per bin firmware is 12287)

Change-Id: I383b502b79cba9ae4318d52f0c134393701b9e96

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -24,6 +24,7 @@ fw-shipped-$(CONFIG_INPUT_PRESS_NDT) += ndt_fw.bin
 fw-shipped-$(CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI) += novatek_ts_fw.bin novatek_ts_mp.bin
 fw-shipped-$(CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI) += novatek_nt36523_k82_fw01.bin novatek_nt36523_k82_mp01.bin
 fw-shipped-$(CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI) += novatek_nt36523_k82_fw02.bin novatek_nt36523_k82_mp02.bin
+fw-shipped-$(CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI) += novatek_nt36523_k82_fw01_pen.bin novatek_nt36523_k82_mp01_pen.bin
 
 fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
 
